# cex

./: .gitignore  Cargo.toml  README.md  context.md  docker-compose.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: main.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: lib.rs  orderbook.rs
crates/market_data/: Cargo.toml  README.md
crates/market_data/src/: lib.rs
crates/shared/db/: Cargo.toml  README.md
crates/shared/db/migrations/: 20260405073554_initial_schema.sql  20260409081135_update_order_table.sql
crates/shared/db/src/: lib.rs
crates/shared/domain/: Cargo.toml  README.md
crates/shared/domain/src/: errors.rs  lib.rs
