[workspace]
members = ["crates/shared/db",
    "crates/shared/domain",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }
dotenvy = "0.15.7"
serde = {version = "1.0", features = ["derive"]}