[workspace]
members = [ "crates/api","crates/engine", "crates/market_data","crates/shared/db",
    "crates/shared/domain", "crates/market_data",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }
dotenvy = "0.15.7"
actix-web = "4.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["alloc"] }
thiserror="1.0"
domain= {path = "crates/shared/domain"}
db= {path = "crates/shared/db"}
engine= {path = "crates/engine"}
market_data = {path = "crates/market_data"}
api = {path = "crates/api"}
actix-ws = "0.3.0"
